@@ -328,7 +328,7 @@ EmbImageConfigure(
     char *name;
     int count = 0;		/* The counter for picking a unique name */
     int conflict = 0;		/* True if we have a name conflict */
-    unsigned int len;		/* length of image name */
+    size_t len;		/* length of image name */
 
     if (Tk_SetOptions(textPtr->interp, (char*)&eiPtr->body.ei,
 	    eiPtr->body.ei.optionTable,
