@@ -101,7 +101,8 @@ Tk_GetVisual(
     XVisualInfo template, *visInfoList, *bestPtr;
     long mask;
     Visual *visual;
-    int length, c, numVisuals, prio, bestPrio, i;
+    ptrdiff_t length;
+    int c, numVisuals, prio, bestPrio, i;
     CONST char *p;
     VisualDictionary *dictPtr;
     TkColormap *cmapPtr;
